update vite config

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "@react-component-library/utils",
   "description": "A collection of utility hooks and components tailored to streamline React application development.",
   "author": "Khan Cirhan",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "ISC",
   "type": "module",
-  "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    "./hooks": "./dist/hooks/index.js"
+  },
   "files": [
     "*.md",
     "dist"
